<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="prefSwipeQueue"
        android:title="@string/queue_label"/>

    <Preference
        android:key="prefSwipeInbox"
        android:title="@string/inbox_label"/>

    <Preference
        android:key="prefSwipeEpisodes"
        android:title="@string/episodes_label"/>

    <Preference
        android:key="prefSwipeDownloads"
        android:title="@string/downloads_label"/>

    <Preference
        android:key="prefSwipeHistory"
        android:title="@string/playback_history_label"/>

    <Preference
        android:key="prefSwipeFavorites"
        android:title="@string/favorite_episodes_label"/>

    <Preference
        android:key="prefSwipeFeed"
        android:title="@string/individual_subscription"/>

</PreferenceScreen>
