<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/secondaryActionButton"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:layout_marginRight="12dp"
    android:layout_marginEnd="12dp"
    android:background="?selectableItemBackgroundBorderless"
    android:clickable="true"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <ImageView
        android:id="@+id/secondaryActionIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        app:tint="?attr/colorAccent"
        tools:ignore="ContentDescription"
        tools:src="@sample/secondaryaction" />

    <de.danoeh.antennapod.ui.common.CircularProgressBar
        android:id="@+id/secondaryActionProgress"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        app:foregroundColor="?attr/colorAccent" />

</FrameLayout>
